<resources>
    <string name="app_name">Swoosh</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league.
    </string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="get_started">GET STARTED</string>
    <string name="fontimage">fontimage</string>
    <string name="logo">logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="next">NEXT</string>
    <string name="men">Men</string>
    <string name="co_ed">Co-ed</string>
    <string name="women">Women</string>
    <string name="fontimage3">fontimage3</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="fontimage2">fontimage2</string>
    <string name="fontimage4">fontimage4</string>
</resources>
